# ora

./: .gitignore  README.md  pyproject.toml
evals/: questions.json
ora/: __init__.py  engine.py  eval.py
